Uploaded image for project: 'ActiveMQ C++ Client'
  1. ActiveMQ C++ Client
  2. AMQCPP-223

Message delivered async do not have their read only properties set properly.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 2.2.4, 3.0
    • 2.2.5, 3.0
    • CMS Impl, Openwire
    • None

    Description

      The Messages are not properly tagged as readonly in a consistant manner in the Asnyc dispatch from ActiveMQConnection. Some changes are needed in the Message classes to consolidate the readonly mode change so that it can be done correctly.

      Attachments

        Activity

          People

            tabish Timothy A. Bish
            tabish Timothy A. Bish
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 60h
                60h
                Remaining:
                Time Spent - 20h Remaining Estimate - 40h
                40h
                Logged:
                Time Spent - 20h Remaining Estimate - 40h
                20h