https://issues.apache.org/activemq/browse/AMQCPP-223

Add readOnlyBody and readOnlyProperties to the base Message command and then use correct checks in the CMS Message implementations, set the Message body and propeties to read only in the ActiveMQConnection class explicitly on a dispatch to the consumer.

git-svn-id: https://svn.apache.org/repos/asf/activemq/activemq-cpp/trunk@747057 13f79535-47bb-0310-9956-ffa450edef68