src/main/activemq/commands/ActiveMQBytesMessage.cpp
@@ -83,7 +83,7 @@ std::size_t ActiveMQBytesMessage::getBodyLength() const {
 void ActiveMQBytesMessage::reset() throw ( cms::CMSException ) {
 
     try{
-        readOnly = true;
+        this->setReadOnlyBody( true );
         inputStream.setBuffer( getContent() );
     }
     AMQ_CATCH_RETHROW( ActiveMQException )
@@ -95,7 +95,7 @@ void ActiveMQBytesMessage::reset() throw ( cms::CMSException ) {
 bool ActiveMQBytesMessage::readBoolean() const throw ( cms::CMSException ) {
 
     try{
-        checkReadOnly();
+        checkWriteOnlyBody();
         return dataInputStream.readBoolean();
     }
     AMQ_CATCH_RETHROW( ActiveMQException )
@@ -107,7 +107,7 @@ bool ActiveMQBytesMessage::readBoolean() const throw ( cms::CMSException ) {
 void ActiveMQBytesMessage::writeBoolean( bool value ) throw ( cms::CMSException ) {
 
     try{
-        checkWriteOnly();
+        checkReadOnlyBody();
         dataOutputStream.writeBoolean( value );
     }
     AMQ_CATCH_RETHROW( ActiveMQException )
@@ -119,7 +119,7 @@ void ActiveMQBytesMessage::writeBoolean( bool value ) throw ( cms::CMSException 
 unsigned char ActiveMQBytesMessage::readByte() const throw ( cms::CMSException ) {
 
     try{
-        checkReadOnly();
+        checkWriteOnlyBody();
         return dataInputStream.readByte();
     }
     AMQ_CATCH_RETHROW( ActiveMQException )
@@ -131,7 +131,7 @@ unsigned char ActiveMQBytesMessage::readByte() const throw ( cms::CMSException )
 void ActiveMQBytesMessage::writeByte( unsigned char value ) throw ( cms::CMSException ) {
 
     try{
-        checkWriteOnly();
+        checkReadOnlyBody();
         dataOutputStream.writeByte( value );
     }
     AMQ_CATCH_RETHROW( ActiveMQException )
@@ -144,7 +144,7 @@ std::size_t ActiveMQBytesMessage::readBytes( std::vector<unsigned char>& value )
     throw ( cms::CMSException ) {
 
     try{
-        checkReadOnly();
+        checkWriteOnlyBody();
         return dataInputStream.read( value );
     }
     AMQ_CATCH_RETHROW( ActiveMQException )
@@ -156,7 +156,7 @@ std::size_t ActiveMQBytesMessage::readBytes( std::vector<unsigned char>& value )
 void ActiveMQBytesMessage::writeBytes( const std::vector<unsigned char>& value ) throw ( cms::CMSException ) {
 
     try{
-        checkWriteOnly();
+        checkReadOnlyBody();
         dataOutputStream.write( value );
     }
     AMQ_CATCH_RETHROW( ActiveMQException )
@@ -169,7 +169,7 @@ std::size_t ActiveMQBytesMessage::readBytes( unsigned char*& buffer, std::size_t
     throw ( cms::CMSException ) {
 
     try{
-        checkReadOnly();
+        checkWriteOnlyBody();
         return dataInputStream.read( buffer, 0, length );
     }
     AMQ_CATCH_RETHROW( ActiveMQException )
@@ -183,7 +183,7 @@ void ActiveMQBytesMessage::writeBytes( const unsigned char* value,
                                        std::size_t length ) throw ( cms::CMSException ) {
 
     try{
-        checkWriteOnly();
+        checkReadOnlyBody();
         dataOutputStream.write( value, offset, length );
     }
     AMQ_CATCH_RETHROW( ActiveMQException )
@@ -195,7 +195,7 @@ void ActiveMQBytesMessage::writeBytes( const unsigned char* value,
 char ActiveMQBytesMessage::readChar() const throw ( cms::CMSException ) {
 
     try{
-        checkReadOnly();
+        checkWriteOnlyBody();
         return dataInputStream.readChar();
     }
     AMQ_CATCH_RETHROW( ActiveMQException )
@@ -207,7 +207,7 @@ char ActiveMQBytesMessage::readChar() const throw ( cms::CMSException ) {
 void ActiveMQBytesMessage::writeChar( char value ) throw ( cms::CMSException ) {
 
     try{
-        checkWriteOnly();
+        checkReadOnlyBody();
         dataOutputStream.writeChar( value );
     }
     AMQ_CATCH_RETHROW( ActiveMQException )
@@ -219,7 +219,7 @@ void ActiveMQBytesMessage::writeChar( char value ) throw ( cms::CMSException ) {
 float ActiveMQBytesMessage::readFloat() const throw ( cms::CMSException ) {
 
     try{
-        checkReadOnly();
+        checkWriteOnlyBody();
         return dataInputStream.readFloat();
     }
     AMQ_CATCH_RETHROW( ActiveMQException )
@@ -231,7 +231,7 @@ float ActiveMQBytesMessage::readFloat() const throw ( cms::CMSException ) {
 void ActiveMQBytesMessage::writeFloat( float value ) throw ( cms::CMSException ) {
 
     try{
-        checkWriteOnly();
+        checkReadOnlyBody();
         dataOutputStream.writeFloat( value );
     }
     AMQ_CATCH_RETHROW( ActiveMQException )
@@ -243,7 +243,7 @@ void ActiveMQBytesMessage::writeFloat( float value ) throw ( cms::CMSException )
 double ActiveMQBytesMessage::readDouble() const throw ( cms::CMSException ) {
 
     try{
-        checkReadOnly();
+        checkWriteOnlyBody();
         return dataInputStream.readDouble();
     }
     AMQ_CATCH_RETHROW( ActiveMQException )
@@ -255,7 +255,7 @@ double ActiveMQBytesMessage::readDouble() const throw ( cms::CMSException ) {
 void ActiveMQBytesMessage::writeDouble( double value ) throw ( cms::CMSException ) {
 
     try{
-        checkWriteOnly();
+        checkReadOnlyBody();
         dataOutputStream.writeDouble( value );
     }
     AMQ_CATCH_RETHROW( ActiveMQException )
@@ -267,7 +267,7 @@ void ActiveMQBytesMessage::writeDouble( double value ) throw ( cms::CMSException
 short ActiveMQBytesMessage::readShort() const throw ( cms::CMSException ) {
 
     try{
-        checkReadOnly();
+        checkWriteOnlyBody();
         return dataInputStream.readShort();
     }
     AMQ_CATCH_RETHROW( ActiveMQException )
@@ -279,7 +279,7 @@ short ActiveMQBytesMessage::readShort() const throw ( cms::CMSException ) {
 void ActiveMQBytesMessage::writeShort( short value ) throw ( cms::CMSException ) {
 
     try{
-        checkWriteOnly();
+        checkReadOnlyBody();
         dataOutputStream.writeShort( value );
     }
     AMQ_CATCH_RETHROW( ActiveMQException )
@@ -291,7 +291,7 @@ void ActiveMQBytesMessage::writeShort( short value ) throw ( cms::CMSException )
 unsigned short ActiveMQBytesMessage::readUnsignedShort() const throw ( cms::CMSException ) {
 
     try{
-        checkReadOnly();
+        checkWriteOnlyBody();
         return dataInputStream.readUnsignedShort();
     }
     AMQ_CATCH_RETHROW( ActiveMQException )
@@ -303,7 +303,7 @@ unsigned short ActiveMQBytesMessage::readUnsignedShort() const throw ( cms::CMSE
 void ActiveMQBytesMessage::writeUnsignedShort( unsigned short value ) throw ( cms::CMSException ) {
 
     try{
-        checkWriteOnly();
+        checkReadOnlyBody();
         dataOutputStream.writeUnsignedShort( value );
     }
     AMQ_CATCH_RETHROW( ActiveMQException )
@@ -315,7 +315,7 @@ void ActiveMQBytesMessage::writeUnsignedShort( unsigned short value ) throw ( cm
 int ActiveMQBytesMessage::readInt() const throw ( cms::CMSException ) {
 
     try{
-        checkReadOnly();
+        checkWriteOnlyBody();
         return dataInputStream.readInt();
     }
     AMQ_CATCH_RETHROW( ActiveMQException )
@@ -327,7 +327,7 @@ int ActiveMQBytesMessage::readInt() const throw ( cms::CMSException ) {
 void ActiveMQBytesMessage::writeInt( int value ) throw ( cms::CMSException ) {
 
     try{
-        checkWriteOnly();
+        checkReadOnlyBody();
         dataOutputStream.writeInt( value );
     }
     AMQ_CATCH_RETHROW( ActiveMQException )
@@ -339,7 +339,7 @@ void ActiveMQBytesMessage::writeInt( int value ) throw ( cms::CMSException ) {
 long long ActiveMQBytesMessage::readLong() const throw ( cms::CMSException ) {
 
     try{
-        checkReadOnly();
+        checkWriteOnlyBody();
         return dataInputStream.readLong();
     }
     AMQ_CATCH_RETHROW( ActiveMQException )
@@ -351,7 +351,7 @@ long long ActiveMQBytesMessage::readLong() const throw ( cms::CMSException ) {
 void ActiveMQBytesMessage::writeLong( long long value ) throw ( cms::CMSException ) {
 
     try{
-        checkWriteOnly();
+        checkReadOnlyBody();
         dataOutputStream.writeLong( value );
     }
     AMQ_CATCH_RETHROW( ActiveMQException )
@@ -363,7 +363,7 @@ void ActiveMQBytesMessage::writeLong( long long value ) throw ( cms::CMSExceptio
 std::string ActiveMQBytesMessage::readString() const throw ( cms::CMSException ) {
 
     try{
-        checkReadOnly();
+        checkWriteOnlyBody();
         return dataInputStream.readString();
     }
     AMQ_CATCH_RETHROW( ActiveMQException )
@@ -375,7 +375,7 @@ std::string ActiveMQBytesMessage::readString() const throw ( cms::CMSException )
 void ActiveMQBytesMessage::writeString( const std::string& value ) throw ( cms::CMSException ) {
 
     try{
-        checkWriteOnly();
+        checkReadOnlyBody();
         dataOutputStream.writeChars( value );
     }
     AMQ_CATCH_RETHROW( ActiveMQException )
@@ -387,7 +387,7 @@ void ActiveMQBytesMessage::writeString( const std::string& value ) throw ( cms::
 std::string ActiveMQBytesMessage::readUTF() const throw ( cms::CMSException ) {
 
     try{
-        checkReadOnly();
+        checkWriteOnlyBody();
         return dataInputStream.readUTF();
     }
     AMQ_CATCH_RETHROW( ActiveMQException )
@@ -399,7 +399,7 @@ std::string ActiveMQBytesMessage::readUTF() const throw ( cms::CMSException ) {
 void ActiveMQBytesMessage::writeUTF( const std::string& value ) throw ( cms::CMSException ) {
 
     try{
-        checkWriteOnly();
+        checkReadOnlyBody();
         dataOutputStream.writeUTF( value );
     }
     AMQ_CATCH_RETHROW( ActiveMQException )
